@@ -1,4 +1,5 @@
 In development:
+	* Unhide the tweet client and time info after reply
 
 0.23:
 	* Fix for unread tweets count marker
